# openGLProject

./: .gitignore  CMakeLists.txt  READEME.md  glad.c  main.cpp
libraries/include/glad/: glad.h
